syntax = "proto3";

package sekolah_service;

option go_package = "../backend/sekolah/proto;auth";
service SchoolService {
  rpc GetSchoolInfo(SchoolRequest) returns (SchoolResponse);
}

message SchoolRequest {
  string school_id = 1;
}

message SchoolResponse {
  string school_name = 1;
  string address = 2;
}
